# CIPHER

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.claude/hooks/: session-start.sh
src/cipher/: __init__.py  __main__.py  assistant.py  desktop.py  manager.py  models.py  persona.py  robot.py  store.py
tests/: test_assistant.py  test_coordination_commands.py  test_desktop.py  test_manager.py  test_persona.py  test_robot.py  test_voice_commands.py
